# valid-ruff

./: changed_files.txt  changes.diff  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: pr-checks.yml
src/: calculadora.py
tests/: test_calculadora.py
